# lazy-ninja

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: python-publish.yml
docs/: TYPE_SAFETY.md  mkdocs.yml  typing-guide.md
docs/docs/en/: auth-guide.md  features.md  index.md
docs/docs/en/architecture/: auth.md
docs/docs/pt/: auth-guide.md  features.md  index.md
src/lazy_ninja/: __init__.py  auth.py  base.py  builder.py  core.py  file_upload.py  helpers.py  pagination.py  registry.py  routes.py  utils.py
src/lazy_ninja/auth/: __init__.py  base.py  config.py  hooks.py  security.py  tokens.py
src/lazy_ninja/cli/: client_generator.py  main.py  startproject.py
src/lazy_ninja/handlers/: response.py
src/lazy_ninja/router/: async_router.py  base.py  sync_router.py
src/lazy_ninja/utils/: __init__.py  base.py  model.py  schema.py  type_guards.py
tests/: conftest.py  models.py  settings.py  test_auth.py  test_builder.py  test_cli.py  test_core.py  test_custom_schemas.py  test_errors.py  test_file_upload.py  test_helpers.py  test_hooks.py  test_middleware.py  test_pagination.py  test_registry.py  test_routes.py  test_utils.py  urls.py  urls_custom_schemas.py
