[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-ninja"
version = "0.1.1"
description = "A library for quickly creating Django Ninja APIs." 
authors = [{name = "Augusto Domingos"}]
urls = {"Homepage" = "https://github.com/AghastyGD/lazy-ninja"}
readme = "README.md"
dependencies = [
    "django>=3.2",
    "django-ninja",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lazy_ninja"]