[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-ninja"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Rapidly generate CRUD API endpoints for your Django models with Django Ninja. Includes dynamic schema generation and customizable hooks." 
authors = [{name = "Augusto Domingos"}]
urls = {"Homepage" = "https://github.com/AghastyGD/lazy-ninja"}
readme = "README.md"
dependencies = [
    "django>=4.2",
    "django-ninja>=0.22",
    "pydantic>=2.0",
    "inflect>=7.5",
    "colorama>=0.4.6",
    "pyjwt>=2.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]

[project.optional-dependencies]
standard = [
    "openapi-generator-cli[jdk4py]>=7.14.0"
    ]

no-jdk= [
    "openapi-generator-cli>=7.14.0"
]


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["lazy_ninja.tests*"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.6.9",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.7",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
]

[project.scripts]
lazy-ninja = "lazy_ninja.cli.main:main"
